fix: Fixed input labels not showing

--- a/projects/web/src/material.scss
+++ b/projects/web/src/material.scss
@@ -153,7 +153,7 @@ html {
       tertiary: $tertiary-palette,
     ),
     typography: Roboto,
-    density: -2,
+    density: -1,
   ));
 }
 
